# credit-risk-decision-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt
configs/: config.yaml
dashboard/: app.py  demo.html
models/: feature_medians.json
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_risk_policy.ipynb  05_explainability.ipynb  06_fairness.ipynb
reports/: model_card.md
scripts/: build_dashboard_artifacts.py
src/: api.py  config.py  features.py  policy.py  score.py  train.py
src/models/: __init__.py
streamlit_artifacts/: fairness_metrics.csv  feature_importance.csv  test_scores.csv  xgboost_calibrated.pkl
